use meta action for image tags

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,8 @@ jobs:
       fail-fast: false
       matrix:
         epics-target: [linux-x86_64] # , linux-aarch64]
+        image-target: [developer, runtime]
+
         include:
           - os: ubuntu-latest # everyone is on ubuntu-latest
           - epics-target: linux-x86_64
@@ -27,8 +29,9 @@ jobs:
           #     platform: linux/arm64
 
     runs-on: ${{ matrix.os }}
-    env:
-      TAG: ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}${{ matrix.extension }}
+    outputs:
+      meta-developer: ${{ steps.meta-developer.outputs.tags }}
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -66,6 +69,15 @@ jobs:
         if: ${{ matrix.epics-target == 'linux-x86_64' }}
         run: tests/run-tests.sh ci_test
 
+      - name: Developer target metadata
+        id: meta-developer
+        uses: docker/metadata-action@v3
+        with:
+          images: |
+            ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}${{ matrix.extension }}-developer
+          tags: |
+            type=raw,value=${{ github.ref_name }}
+
       - name: Push developer image
         if: ${{ github.event_name == 'push' && github.ref_type == 'tag' }}
         uses: docker/build-push-action@v5
@@ -75,8 +87,18 @@ jobs:
           target: developer
           build-args: |
             IMAGE_EXT=${{ matrix.extension }}
-          tags: ${{ env.TAG }}-developer:${{ github.ref_name }}
+          tags: ${{ steps.meta-developer.outputs.tags }}
+          labels: ${{ steps.meta-developer.outputs.labels }}
           push: true
+
+      - name: Runtime target metadata
+        id: meta-runtime
+        uses: docker/metadata-action@v3
+        with:
+          images: |
+            ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}${{ matrix.extension }}-runtime
+          tags: |
+            type=raw,value=${{ github.ref_name }}
 
       - name: Push runtime image
         if: ${{ github.event_name == 'push' && github.ref_type == 'tag' }}
@@ -87,7 +109,8 @@ jobs:
           target: runtime
           build-args: |
             IMAGE_EXT=${{ matrix.extension }}
-          tags: ${{ env.TAG }}-runtime:${{ github.ref_name }}
+          tags: ${{ steps.meta-runtime.outputs.tags }}
+          labels: ${{ steps.meta-runtime.outputs.labels }}
           push: true
 
   release:
@@ -98,7 +121,7 @@ jobs:
 
     # this job runs in the native developer container we just made
     container:
-      image: ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}-developer:${{ github.ref_name }}
+      image: ${{ needs.build.outputs.meta-developer-tags }}
 
     steps:
       - name: generate-schema
